Update LinkedIn link to The Wellness Brand

--- a/public/index.html
+++ b/public/index.html
@@ -569,7 +569,7 @@
                 <div class="social-links">
                     <a href="https://github.com/Matmax-Worldwide" target="_blank">GitHub</a>
                     <a href="https://twitter.com/matmaxworldwide" target="_blank">Twitter</a>
-                    <a href="https://linkedin.com/company/matmax-worldwide" target="_blank">LinkedIn</a>
+                    <a href="https://www.linkedin.com/company/the-wellness-brand" target="_blank">LinkedIn</a>
                 </div>
             </div>
         </div>
