Replace Twitter with Instagram @matmaxyoga in social links

--- a/public/index.html
+++ b/public/index.html
@@ -568,7 +568,7 @@
                 <p>© 2025 MATMAX WORLDWIDE. Made with ❤️ for humanity.</p>
                 <div class="social-links">
                     <a href="https://github.com/Matmax-Worldwide" target="_blank">GitHub</a>
-                    <a href="https://twitter.com/matmaxworldwide" target="_blank">Twitter</a>
+                    <a href="https://instagram.com/matmaxyoga" target="_blank">Instagram</a>
                     <a href="https://www.linkedin.com/company/the-wellness-brand" target="_blank">LinkedIn</a>
                 </div>
             </div>
