Remove references to @jasontanswe/railway-mcp in setup instructions

--- a/public/index.html
+++ b/public/index.html
@@ -850,7 +850,7 @@
                             <code>// In Cursor Settings > MCP Servers</code>
                             <code>Name: "Railway MCP"</code>
                             <code>Transport Type: "Command"</code>
-                            <code>Command: npx -y @jasontanswe/railway-mcp YOUR_RAILWAY_API_TOKEN</code>
+                            <code>Command: YOUR_RAILWAY_API_TOKEN</code>
                         </div>
                     </article>
                     
@@ -916,7 +916,7 @@
                             <li>Add a new MCP server</li>
                             <li>Name it "Railway MCP"</li>
                             <li>Set Transport Type to "Command"</li>
-                            <li>Set Command to: <code>npx -y @jasontanswe/railway-mcp YOUR_RAILWAY_API_TOKEN</code></li>
+                            <li>Set Command to: <code>YOUR_RAILWAY_API_TOKEN</code></li>
                             <li>Save the configuration</li>
                         </ol>
                     </div>
