--- a/public/index.html
+++ b/public/index.html
@@ -923,6 +923,30 @@
                     
                     <div class="setup-step">
                         <div class="step-number">3</div>
+                        <h3>Configure Claude for Desktop</h3>
+                        <p>To use with Claude for Desktop:</p>
+                        <ol>
+                            <li>Edit your Claude for Desktop config file:
+                                <ul>
+                                    <li>macOS: <code>~/Library/Application\ Support/Claude/claude_desktop_config.json</code></li>
+                                    <li>Windows: <code>%APPDATA%\Claude\claude_desktop_config.json</code></li>
+                                </ul>
+                            </li>
+                            <li>Add this configuration:
+                                <code>
+"mcpServers": {
+  "railway": {
+    "command": "YOUR_RAILWAY_API_TOKEN"
+  }
+}
+                                </code>
+                            </li>
+                            <li>Restart Claude for Desktop</li>
+                        </ol>
+                    </div>
+                    
+                    <div class="setup-step">
+                        <div class="step-number">4</div>
                         <h3>Start Using</h3>
                         <p>Once configured, you can use natural language to manage your Payload CMS projects:</p>
                         <ul>
