--- a/public/index.html
+++ b/public/index.html
@@ -876,7 +876,7 @@
             <div class="container">
                 <div class="about-content">
                     <div class="about-image">
-                        <img src="https://images.unsplash.com/photo-1581291518633-83b4ebd1d83e?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="MATMAX WORLDWIDE - Technology for humanity" width="1350" height="900" loading="lazy">
+                        <img src="/images/matmax-logo.svg" alt="MATMAX WORLDWIDE - Technology for humanity" width="600" height="600" loading="lazy">
                     </div>
                     <div class="about-text">
                         <h2 id="about-heading">MATMAX WORLDWIDE</h2>
