Replace MATMAX logo with 00Matmax-world-logo-_1_-svg.png

--- a/public/index.html
+++ b/public/index.html
@@ -876,7 +876,7 @@
             <div class="container">
                 <div class="about-content">
                     <div class="about-image">
-                        <img src="/images/matmax-logo.svg" alt="MATMAX WORLDWIDE - Technology for humanity" width="600" height="600" loading="lazy">
+                        <img src="/images/matmax-logo.png" alt="MATMAX WORLDWIDE - Technology for humanity" width="600" height="600" loading="lazy">
                     </div>
                     <div class="about-text">
                         <h2 id="about-heading">MATMAX WORLDWIDE</h2>
