--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://www.payloadcmsmcp.info/">
     
-    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+    <link rel="icon" href="/logopayload.png" type="image/png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -142,7 +142,7 @@
             text-decoration: none;
             display: flex;
             align-items: center;
-            gap: 0.5rem;
+            gap: 0.8rem;
             z-index: 1001;
             position: relative;
             transition: all 0.3s ease;
@@ -154,16 +154,27 @@
         }
 
         .logo-image {
-            width: 40px;
-            height: 40px;
+            width: 50px;
+            height: 50px;
             border-radius: 10px;
             box-shadow: 0 3px 10px rgba(0, 0, 0, 0.25);
             transition: all 0.3s ease;
+            object-fit: contain;
+            background-color: white;
+            padding: 5px;
+            animation: subtle-pulse 3s ease-in-out infinite;
+        }
+
+        @keyframes subtle-pulse {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.05); }
+            100% { transform: scale(1); }
         }
 
         .logo:hover .logo-image {
             transform: translateY(-2px);
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+            animation: none;
         }
 
         .logo-icon {
@@ -1069,8 +1080,9 @@
             }
 
             .logo-image {
-                width: 28px;
-                height: 28px;
+                width: 40px;
+                height: 40px;
+                padding: 4px;
             }
 
             .mobile-nav-toggle {
@@ -1313,8 +1325,8 @@
     <header role="banner">
         <div class="container header-content">
             <a href="/" class="logo" aria-label="Payload CMS 3.0 MCP Home">
-                <img src="/logopayload.png" alt="Payload CMS 3.0 Logo" class="logo-image" width="40" height="40">
-                <span>Payload CMS 3.0 MCP</span>
+                <img src="/logopayload.png" alt="Payload CMS 3.0 Logo" class="logo-image" width="50" height="50">
+                <span><strong>Payload CMS</strong> <span style="opacity: 0.9; font-weight: 500;">3.0 MCP</span></span>
             </a>
             <button class="mobile-nav-toggle" aria-label="Toggle navigation menu" aria-expanded="false">
                 <div class="hamburger-icon">
