--- a/public/index.html
+++ b/public/index.html
@@ -165,6 +165,15 @@
             animation: subtle-pulse 3s ease-in-out infinite;
         }
 
+        .logo-text {
+            display: inline-block;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            max-width: 150px;
+            transition: all 0.3s ease;
+        }
+
         @keyframes subtle-pulse {
             0% { transform: scale(1); }
             50% { transform: scale(1.05); }
@@ -630,8 +639,29 @@
 
         @media (max-width: 768px) {
             .header-content {
-                flex-direction: column;
-                gap: 1rem;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+                padding: 0.5rem 0;
+            }
+
+            .logo {
+                font-size: 1.2rem;
+                gap: 0.5rem;
+            }
+
+            .logo-image {
+                width: 40px;
+                height: 40px;
+                padding: 3px;
+            }
+
+            .logo span {
+                font-size: 0.9rem;
+            }
+
+            .logo-text {
+                max-width: 120px;
             }
 
             nav ul {
@@ -1070,7 +1100,8 @@
             }
 
             .logo {
-                font-size: 1.2rem;
+                font-size: 1rem;
+                gap: 0.4rem;
             }
 
             .logo-icon {
@@ -1080,9 +1111,17 @@
             }
 
             .logo-image {
-                width: 40px;
-                height: 40px;
-                padding: 4px;
+                width: 32px;
+                height: 32px;
+                padding: 3px;
+            }
+
+            .logo span {
+                font-size: 0.9rem;
+            }
+
+            .logo-text {
+                max-width: 100px;
             }
 
             .mobile-nav-toggle {
@@ -1325,8 +1364,8 @@
     <header role="banner">
         <div class="container header-content">
             <a href="/" class="logo" aria-label="Payload CMS 3.0 MCP Home">
-                <img src="/logopayload.png" alt="Payload CMS 3.0 Logo" class="logo-image" width="50" height="50">
-                <span><strong>Payload CMS</strong> <span style="opacity: 0.9; font-weight: 500;">3.0 MCP</span></span>
+                <img src="/logopayload.png" alt="Payload CMS 3.0 Logo" class="logo-image" width="50" height="50" loading="eager">
+                <span class="logo-text"><strong>Payload CMS</strong> <span style="opacity: 0.9; font-weight: 500;">3.0 MCP</span></span>
             </a>
             <button class="mobile-nav-toggle" aria-label="Toggle navigation menu" aria-expanded="false">
                 <div class="hamburger-icon">
