Enhance logo display in both desktop and responsive views

--- a/public/index.html
+++ b/public/index.html
@@ -154,8 +154,8 @@
         }
 
         .logo-image {
-            width: 50px;
-            height: 50px;
+            width: 60px;
+            height: 60px;
             border-radius: 10px;
             box-shadow: 0 3px 10px rgba(0, 0, 0, 0.25);
             transition: all 0.3s ease;
@@ -164,6 +164,7 @@
             padding: 5px;
             animation: subtle-pulse 3s ease-in-out infinite;
             flex-shrink: 0;
+            display: block;
         }
 
         .logo-text {
@@ -342,6 +343,13 @@
                 width: 100%;
                 text-align: center;
                 margin-bottom: 0.5rem;
+            }
+
+            .logo-image {
+                width: 50px;
+                height: 50px;
+                padding: 4px;
+                margin-right: 2px;
             }
         }
 
@@ -659,9 +667,9 @@
             }
 
             .logo-image {
-                width: 40px;
-                height: 40px;
-                padding: 3px;
+                width: 50px;
+                height: 50px;
+                padding: 4px;
                 margin-right: 2px;
             }
 
@@ -909,6 +917,13 @@
             .setup-step li {
                 margin-bottom: 0.7rem;
             }
+
+            .logo-image {
+                width: 45px;
+                height: 45px;
+                padding: 3px;
+                margin-right: 0;
+            }
         }
 
         .command-examples {
@@ -1127,8 +1142,8 @@
             }
 
             .logo-image {
-                width: 36px;
-                height: 36px;
+                width: 45px;
+                height: 45px;
                 padding: 3px;
                 margin-right: 0;
             }
@@ -1382,7 +1397,7 @@
     <header role="banner">
         <div class="container header-content">
             <a href="/" class="logo" aria-label="Payload CMS 3.0 MCP Home">
-                <img src="/logopayload.png" alt="Payload CMS 3.0 Logo" class="logo-image" width="50" height="50" loading="eager">
+                <img src="/logopayload.png" alt="Payload CMS 3.0 Logo" class="logo-image" width="60" height="60" loading="eager">
                 <span class="logo-text">
                     <strong>Payload CMS</strong>
                     <span class="version-text" style="opacity: 0.9; font-weight: 500;">3.0 MCP</span>
