Update logo to use Matmax image with PAYLOAD CMS MCP SERVER text

--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,8 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Payload CMS 3.0 MCP Server - AI-Powered Development Assistant</title>
-    <meta name="description" content="A specialized MCP server for Payload CMS 3.0, ensuring AI agents follow developer guidelines, respect structure, and adhere to best practices. Build Payload CMS 3.0 applications with confidence using AI assistance.">
+    <title>PAYLOAD CMS MCP SERVER | Matmax Worldwide</title>
+    <meta name="description" content="PAYLOAD CMS MCP SERVER - A powerful headless CMS built with Node.js, Express, MongoDB, and React.">
     <meta name="keywords" content="Payload CMS 3.0, MCP, Model Context Protocol, AI agent, developer guidelines, structure validation, best practices, Cursor IDE, AI-assisted development">
     <meta name="author" content="MATMAX WORLDWIDE">
     <meta name="robots" content="index, follow">
@@ -35,7 +35,7 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://www.payloadcmsmcp.info/">
     
-    <link rel="icon" href="/logopayload.png" type="image/png">
+    <link rel="icon" href="/00Matmax-world-logo-_1_-svg.png" type="image/png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -61,7 +61,7 @@
         "logo": "https://www.payloadcmsmcp.info/00Matmax-world-logo-_1_-svg.png"
       },
       "url": "https://www.payloadcmsmcp.info/",
-      "image": "https://www.payloadcmsmcp.info/logopayload.png",
+      "image": "https://www.payloadcmsmcp.info/00Matmax-world-logo-_1_-svg.png",
       "sameAs": [
         "https://github.com/Matmax-Worldwide/payloadcmsmcp",
         "https://payload-cms-mcp-production.up.railway.app"
@@ -1396,11 +1396,11 @@
 <body>
     <header role="banner">
         <div class="container header-content">
-            <a href="/" class="logo" aria-label="Payload CMS 3.0 MCP Home">
-                <img src="/logopayload.png" alt="Payload CMS 3.0 Logo" class="logo-image" width="60" height="60" loading="eager">
+            <a href="/" class="logo" aria-label="Payload CMS MCP SERVER Home">
+                <img src="/00Matmax-world-logo-_1_-svg.png" alt="Matmax Worldwide" class="logo-image" width="60" height="60" loading="eager">
                 <span class="logo-text">
-                    <strong>Payload CMS</strong>
-                    <span class="version-text" style="opacity: 0.9; font-weight: 500;">3.0 MCP</span>
+                    <strong>PAYLOAD CMS</strong>
+                    <span class="version-text" style="opacity: 0.9; font-weight: 500;">MCP SERVER</span>
                 </span>
             </a>
             <button class="mobile-nav-toggle" aria-label="Toggle navigation menu" aria-expanded="false">
@@ -1562,8 +1562,7 @@
             <div class="container">
                 <div class="about-content">
                     <div class="about-image">
-                        <img src="/00Matmax-world-logo-_1_-svg.png" alt="MATMAX WORLDWIDE - Technology for humanity" width="300" height="300" loading="lazy" style="margin-bottom: 20px;">
-                        <img src="/logopayload.png" alt="Payload CMS Logo" width="300" height="300" loading="lazy">
+                        <img src="/00Matmax-world-logo-_1_-svg.png" alt="Matmax Worldwide" width="300" height="300" loading="lazy">
                     </div>
                     <div class="about-text">
                         <h2 id="about-heading">MATMAX WORLDWIDE</h2>
@@ -1706,7 +1705,7 @@
         "@type": "Organization",
         "name": "Payload CMS MCP Server",
         "url": "https://www.payloadcmsmcp.info/",
-        "logo": "https://www.payloadcmsmcp.info/logopayload.png"
+        "logo": "https://www.payloadcmsmcp.info/00Matmax-world-logo-_1_-svg.png"
       }
     }
     </script>
