Update header logo and favicon to use logopayload.png

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://www.payloadcmsmcp.info/">
     
-    <link rel="icon" href="/00Matmax-world-logo-_1_-svg.png" type="image/png">
+    <link rel="icon" href="/logopayload.png" type="image/png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -1397,7 +1397,7 @@
     <header role="banner">
         <div class="container header-content">
             <a href="/" class="logo" aria-label="Payload CMS MCP SERVER Home">
-                <img src="/00Matmax-world-logo-_1_-svg.png" alt="Matmax Worldwide" class="logo-image" width="60" height="60" loading="eager">
+                <img src="/logopayload.png" alt="Payload CMS MCP SERVER" class="logo-image" width="60" height="60" loading="eager">
                 <span class="logo-text">
                     <strong>PAYLOAD CMS</strong>
                     <span class="version-text" style="opacity: 0.9; font-weight: 500;">MCP SERVER</span>
