Update header to show complete name 'Payload CMS MCP Server' as a single unit

--- a/public/index.html
+++ b/public/index.html
@@ -1396,11 +1396,10 @@
 <body>
     <header role="banner">
         <div class="container header-content">
-            <a href="/" class="logo" aria-label="Payload CMS MCP SERVER Home">
-                <img src="/logopayload.png" alt="Payload CMS MCP SERVER" class="logo-image" width="60" height="60" loading="eager">
+            <a href="/" class="logo" aria-label="Payload CMS MCP Server Home">
+                <img src="/logopayload.png" alt="Payload CMS MCP Server" class="logo-image" width="60" height="60" loading="eager">
                 <span class="logo-text">
-                    <strong>PAYLOAD CMS</strong>
-                    <span class="version-text" style="opacity: 0.9; font-weight: 500;">MCP SERVER</span>
+                    <strong>Payload CMS MCP Server</strong>
                 </span>
             </a>
             <button class="mobile-nav-toggle" aria-label="Toggle navigation menu" aria-expanded="false">
