Update homepage to include local run instructions

--- a/public/index.html
+++ b/public/index.html
@@ -1654,6 +1654,16 @@
                 </div>
             </div>
         </section>
+
+        <section id="local-run" class="section">
+            <div class="container">
+                <h2 class="section-title">Run Locally</h2>
+                <p class="section-description">You can also run the Payload CMS MCP Server locally for development and testing. Follow the instructions provided in the README to set up your local environment quickly and easily.</p>
+                <pre><code>git clone https://github.com/Matmax-Worldwide/payloadcmsmcp.git
+npm install
+npm run dev</code></pre>
+            </div>
+        </section>
     </main>
 
     <footer role="contentinfo">
