Update Railway deployment button URLs to use direct deployment with manual instructions

--- a/public/index.html
+++ b/public/index.html
@@ -1682,11 +1682,11 @@
                         <h3>Deploy on Railway (Recommended)</h3>
                         <p>The easiest way to deploy the MCP server is using Railway's one-click deployment:</p>
                         <div style="text-align:center; margin: 20px 0;">
-                            <a href="https://railway.app/new?template=https%3A%2F%2Fgithub.com%2FMatmax-Worldwide%2Fpayloadcmsmcp">
+                            <a href="https://railway.app/new">
                                 <img src="https://railway.app/button.svg" alt="Deploy on Railway">
                             </a>
                         </div>
-                        <p>This will automatically set up your server with all necessary configurations.</p>
+                        <p>After clicking the button, select "Deploy from GitHub repo" and search for "Matmax-Worldwide/payloadcmsmcp".</p>
                     </div>
                     
                     <div class="setup-step">
@@ -1906,7 +1906,7 @@
 
     <!-- Railway One-Click Deployment Button -->
     <div style="text-align:center; margin-top: 20px;">
-        <a href="https://railway.app/new?template=https%3A%2F%2Fgithub.com%2FMatmax-Worldwide%2Fpayloadcmsmcp">
+        <a href="https://railway.app/new">
             <img src="https://railway.app/button.svg" alt="Deploy on Railway">
         </a>
     </div>
