--- a/public/deployment.html
+++ b/public/deployment.html
@@ -37,6 +37,23 @@
             --radius-lg: 0.5rem;
             --radius-sm: 0.25rem;
             --transition: all 0.3s ease;
+            --secondary: #2a2a2a;
+            --accent: #ff6b6b;
+            --light: #f5f5f7;
+            --dark: #121212;
+            --gray: #888;
+            --border-radius: 12px;
+            --box-shadow: 0 4px 24px rgba(0, 0, 0, 0.1);
+            --primary-color: #6366f1;
+            --primary-hover: #4f46e5;
+            --secondary-color: #0ea5e9;
+            --text-color: #1e293b;
+            --light-text: #64748b;
+            --bg-color: #ffffff;
+            --light-bg: #f8fafc;
+            --border-color: #e2e8f0;
+            --radius: 8px;
+            --shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -2px rgba(0, 0, 0, 0.1);
         }
 
         * {
@@ -46,62 +63,159 @@
         }
 
         body {
-            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            font-family: 'Inter', sans-serif;
             line-height: 1.6;
-            color: var(--text);
-            background-color: var(--background);
+            color: var(--secondary);
+            background-color: var(--light);
+            overflow-x: hidden;
         }
 
         .container {
             width: 100%;
             max-width: 1200px;
             margin: 0 auto;
-            padding: 0 1.5rem;
+            padding: 0 2rem;
         }
 
         header {
-            background-color: white;
-            box-shadow: var(--shadow);
+            background-color: var(--dark);
+            color: white;
+            padding: 1.5rem 0;
             position: sticky;
             top: 0;
             z-index: 100;
-            padding: 1rem 0;
+            box-shadow: var(--box-shadow);
         }
 
         .header-content {
             display: flex;
             justify-content: space-between;
             align-items: center;
+            position: relative;
         }
 
         .logo {
+            font-size: 1.5rem;
+            font-weight: 700;
+            color: white;
+            text-decoration: none;
             display: flex;
             align-items: center;
-            text-decoration: none;
-            color: var(--text-dark);
-            font-weight: 600;
-            font-size: 1.25rem;
+            gap: 1rem;
+            z-index: 1001;
+            position: relative;
+            transition: all 0.3s ease;
+        }
+
+        .logo:hover .logo-icon {
+            transform: translateY(-2px);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
         }
 
         .logo-image {
-            margin-right: 0.75rem;
+            width: 60px;
+            height: 60px;
+            border-radius: 10px;
+            box-shadow: 0 3px 10px rgba(0, 0, 0, 0.25);
+            transition: all 0.3s ease;
+            object-fit: contain;
+            background-color: white;
+            padding: 5px;
+            animation: subtle-pulse 3s ease-in-out infinite;
+            flex-shrink: 0;
+            display: block;
+        }
+
+        .logo-text {
+            display: inline-block;
+            white-space: nowrap;
+            overflow: visible;
+            text-overflow: unset;
+            max-width: none;
+            transition: all 0.3s ease;
+            line-height: 1.1;
+        }
+
+        .version-text {
+            display: inline-block;
+            margin-left: 3px;
+        }
+
+        @keyframes subtle-pulse {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.05); }
+            100% { transform: scale(1); }
+        }
+
+        .logo:hover .logo-image {
+            transform: translateY(-2px);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+            animation: none;
+        }
+
+        .logo-icon {
+            background: linear-gradient(135deg, var(--primary) 0%, var(--primary-light) 100%);
+            width: 40px;
+            height: 40px;
+            border-radius: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-weight: bold;
+            box-shadow: 0 3px 10px rgba(0, 0, 0, 0.25);
+            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+            letter-spacing: -0.5px;
+            position: relative;
+            overflow: hidden;
+            transition: all 0.3s ease;
+        }
+
+        .logo-icon::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.2), transparent);
+            transition: 0.5s;
+        }
+
+        .logo:hover .logo-icon::before {
+            left: 100%;
         }
 
         nav ul {
             display: flex;
             list-style: none;
-            gap: 1.5rem;
+            gap: 2rem;
         }
 
         nav a {
+            color: white;
             text-decoration: none;
-            color: var(--text);
             font-weight: 500;
             transition: var(--transition);
+            position: relative;
         }
 
         nav a:hover {
-            color: var(--primary);
+            color: var(--primary-light);
+        }
+
+        nav a::after {
+            content: '';
+            position: absolute;
+            bottom: -5px;
+            left: 0;
+            width: 0;
+            height: 2px;
+            background-color: var(--primary-light);
+            transition: var(--transition);
+        }
+
+        nav a:hover::after {
+            width: 100%;
         }
 
         main {
